# Expense_Tracker

./: .gitignore  README.md  app.py  categories.json  claude_desktop_config.json  config.py  context.py  create_user.py  db.py  init_db.py  logger.py  main.py  pyproject.toml  requirements.txt  run.py  schema.sql  utils.py
api/: auth.py  middleware.py  server.py
resources/: category_resource.py
tools/: budget_tools.py  category_tools.py  expense_tools.py  income_tools.py  summary_tools.py  utility_tools.py
