[project]
name = "expense-tracker-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.41.0",
]
